System initialize, launcher bg, SettingsApp