@@ -1,2 +1,3 @@
 #Removes JOGL error from the console if launching from WSL.
-java -cp ".:*" MainSystemServiceKt
+cd out/artifacts/MOys_systemClasses_main_jar
+java --add-opens java.desktop/sun.awt=ALL-UNNAMED --add-opens java.desktop/sun.java2d=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED -cp ".:*" MainSystemServiceKt
